fixed spacing

--- a/css/index.css
+++ b/css/index.css
@@ -245,7 +245,6 @@ h2 {
 .homePage .mainImg {
   max-width: 100%;
   width: 1367px;
-  margin-top: 56px;
   max-height: 750px;
   height: 750px;
   background-image: url(../images/main-img.jpeg);
@@ -374,18 +373,18 @@ h2 {
   color: #89daf5;
   transition: 0.45s;
 }
-header {
+.aboutHead {
   max-width: 1367px;
   margin: 80px auto 0 auto;
   font-size: 3rem;
   text-align: center;
 }
 @media (max-width: 627px) {
-  header {
+  .aboutHead {
     margin-top: 130px;
   }
 }
-header .aboutHead {
+.aboutHead .aboutHead {
   font-family: 'Fjalla One', sans-serif;
   color: #89daf5;
 }
@@ -442,7 +441,7 @@ footer {
   background: #89daf5;
 }
 footer .footerLogo {
-  width: 45%;
+  width: 60%;
   align-items: center;
   justify-content: center;
   padding: 10px 0;
