--- a/less/about-page.less
+++ b/less/about-page.less
@@ -1,4 +1,4 @@
-header {
+.aboutHead {
     max-width: 1367px;
     margin: 80px auto 0 auto;
     font-size: 3rem;
