--- a/less/footer.less
+++ b/less/footer.less
@@ -9,7 +9,7 @@ footer {
 
 
         .footerLogo {
-            width:45%;
+            width:60%;
             display: flex;
             align-items: center;
             justify-content: center;
