--- a/less/main-page.less
+++ b/less/main-page.less
@@ -3,7 +3,7 @@
     .mainImg {
         max-width: 100%;
         width: 1367px;
-        margin-top: 56px;
+        // margin-top: 56px;
         max-height: 750px;
         height: 750px;
         background-image: url(../images/main-img.jpeg);
